# 661-project4

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  package_setup_template.sh  project4_setup.sh
src/package_119399002/: CMakeLists.txt  package.xml
src/package_119399002/launch/: loadrobot.launch.py  picknplace.launch.py
src/package_119399002/src/: picknplace_node.cpp
src/panda_moveit_config/: .setup_assistant  package.xml
src/panda_moveit_config/config/: initial_positions.yaml  panda.srdf
